Fix dev icons alignment

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@
 .dev-icon {
   width: 100px;
   height: 100px;
+  margin: 1rem;
 }
 .about-desc {
   display: flex;
